# django-fsm-deferred-reproduction

./: LICENSE  README.md  manage.py  pyproject.toml
django_fsm_deferred_reproduction/: asgi.py  settings.py  urls.py  wsgi.py
newspaper/: models.py  tests.py
newspaper/migrations/: 0001_initial.py
