[tool.poetry]
name = "django-fsm-deferred-reproduction"
version = "0.1.0"
description = ""
authors = ["Dmytro Kyrychuk <dmytro@kyrych.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
django-fsm = "^2.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
